<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/black"
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/background_5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dia_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/sure_login_out"
            android:textColor="@color/album_blue"
            android:textSize="18dp"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/blue" />

        <TextView
            android:id="@+id/dia_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingMultiplier="1"
            android:minHeight="80dp"
            android:paddingBottom="15.0dip"
            android:paddingLeft="20.0dip"
            android:paddingRight="20.0dip"
            android:paddingTop="15.0dip"
            android:text="55555555"
            android:textColor="#ff666666"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="#ffd0d0d0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dia_positiveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:background="@drawable/dialog_btn_selector"
                android:gravity="center"
                android:text="@string/dialog_sure"
                android:textColor="#000000"
                android:textSize="20sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ffd0d0d0" />

            <Button
                android:id="@+id/dia_negativeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/dialog_btn_selector"
                android:textAllCaps="false"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>