<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_framelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="45dp"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0" />

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.0"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:id="@+id/line0"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="46dp"
            android:layout_marginTop="1dp"
            android:background="@color/qian_gray"></View>

        <LinearLayout
            android:id="@+id/ll_tabhost"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/tab_image_home" />

                <TextView
                    android:layout_marginTop="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_home"
                    android:textSize="12sp"
                    android:textColor="@drawable/tab_text_color"
                    android:layout_marginBottom="2dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/tab_image_order" />

                <TextView
                    android:layout_marginTop="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_order"
                    android:textSize="12sp"
                    android:textColor="@drawable/tab_text_color"
                    android:layout_marginBottom="2dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_my"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/tab_image_my" />
                <TextView
                    android:layout_marginTop="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_my"
                    android:textSize="12sp"
                    android:textColor="@drawable/tab_text_color"
                    android:layout_marginBottom="2dp"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</TabHost>